# data-ai-engineer-transition

./: .gitignore  README.md  build_log.txt  index.html  mlflow.db  package-lock.json  package.json
.github/workflows/: ci-cd.yml  ci.yml  portfolio-deploy.yml
ai-env/: pyvenv.cfg
assets/: index-2F44fGi1.css  index-5Y-efN4u.js  index-5Y-efN4u.js.map  index-7bRFOWah.css  index-BAyV4nCt.js  index-BAyV4nCt.js.map  index-BE_0RF5F.js  index-BE_0RF5F.js.map  index-BHKIs0BI.css  index-BP_dcJkZ.js  index-BP_dcJkZ.js.map  index-BR74tjGz.js  index-BR74tjGz.js.map  index-BYu21ad3.css  index-Bj9Nw7Eg.css  index-BmhOeWnm.js  index-BqVisWnK.css  index-BtG8pUQP.css  index-BxTvoe0Q.js  index-BxTvoe0Q.js.map  index-CL4myKBM.js  index-CL4myKBM.js.map  index-CLwdjvZh.js  index-CLwdjvZh.js.map  index-CSLoQU7U.js  index-CSLoQU7U.js.map  index-CSokuFAg.js  index-CSokuFAg.js.map  index-Cd8EgxX3.js  index-Cd8EgxX3.js.map  index-CpcUkWy7.js  index-CpcUkWy7.js.map  index-Cu_mGqVX.css  index-D0YXyhxi.js  index-D0YXyhxi.js.map  index-DDbYxyMC.css  index-DFbuTgru.css  index-DLlLWA3B.js  index-DLlLWA3B.js.map  index-DP7SbqOb.js  (+21 more)
mlruns/0/: meta.yaml
phase-1-mlops/aus-market-analysis/: .gitignore  Dockerfile  README.md  requirements.txt  run_tests.sh
phase-1-mlops/aus-market-analysis/tests/: conftest.py  test_collector.py  test_trainer.py
phase-1-mlops/loan-default-prediction/: .gitignore  Dockerfile  README.md  mlflow.db  requirements.txt
phase-1-mlops/loan-default-prediction/tests/: infercen.py  load_env.py  retreive_azure_mlflow_trackinguri.py  test_azure_connection.py  test_azure_ml_ws.py  test_data.py  test_dummy.py  test_endpoint.py  test_health.py  test_model.py
phase-2-cloud-ai/financial-behavior-insights/: .dvcignore  .gitignore  COMPREHENSIVE_SUMMARY.md  DEPLOYMENT_SUCCESS_CHECKPOINT.md  DEPLOYMENT_UPDATES.md  FINAL_SCRIPT_ANALYSIS_SUMMARY.md  MLOps_Best_Practices.md  Makefile  README.md  ROOT_CAUSE_FIX_SUMMARY.md  SCRIPT_ANALYSIS_AND_UPDATES.md  TROUBLESHOOTING_502.md  UPDATED_SCRIPTS_SUMMARY.md  environment.yml  environment_verification_report.md  mlflow.db  requirements.txt  retrain_compatible_model.py  test_deployments.py  workflow_runner.py
phase-2-cloud-ai/financial-behavior-insights/.dvc/: config
phase-2-cloud-ai/financial-behavior-insights/data/: transactions.csv.dvc
phase-2-cloud-ai/financial-behavior-insights/docs/: PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RESTRUCTURING_SUMMARY.md
phase-2-cloud-ai/financial-behavior-insights/mlflow_model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
phase-2-cloud-ai/financial-behavior-insights/notebooks/: eda_comprehensive_banking.ipynb
phase-2-cloud-ai/financial-behavior-insights/tests/: getit.py  test_connection.py  test_core_functions.py  test_endpoint.py  test_integration.py  test_mlflow_logged_model.py  test_pyfunc_model.py  test_serving.py  (+2 more)
phase-3-specialization/: NewREADME.md  PROJECT_PLAN.md  README.md
phase-3-specialization/intelligent-document-analysis/: .env.backup  .env.backup.20250918_125653  .gitignore  AZURE_DEPLOYMENT_CHECKLIST.md  AZURE_DEPLOYMENT_FIXES.md  AZURE_DEPLOYMENT_FIXES_SUMMARY.md  AZURE_DEPLOYMENT_SUMMARY.md  AZURE_TROUBLESHOOTING_GUIDE.md  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.azure  HOUSEKEEPING_SUMMARY.md  IMPLEMENTATION_GUIDE.md  PROJECT_PLAN.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  create_tables.sql  debug_analysis.py  docker-compose.azure.yml  docker-compose.yml  env.azure  init_database.py  pytest.ini  requirements-azure.txt  requirements-test.txt  requirements.txt  run_azure_tests.py
phase-3-specialization/rag-conversational-ai-assistant/: .env.example  .gitignore  AZURE_OPTIMIZATION_SUMMARY.md  Dockerfile  Dockerfile.azure  Dockerfile.frontend  Makefile  PROJECT_COMPLETION_SUMMARY.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-azure.txt  requirements-minimal.txt  requirements.txt  test_setup.py
phase-3-specialization/rag-conversational-ai-assistant/.github/workflows/: ci.yml
phase-3-specialization/rag-conversational-ai-assistant/config/: langchain.yaml  prometheus.yml
phase-3-specialization/rag-conversational-ai-assistant/config/azure/: web.config
phase-3-specialization/rag-conversational-ai-assistant/config/nginx/: frontend.conf  nginx.conf
phase-3-specialization/rag-conversational-ai-assistant/docs/: AZURE_DEPLOYMENT_GUIDE.md  AZURE_DEPLOYMENT_OPTIMIZED.md  DRIFT_DETECTION_SYSTEM.md  HOUSEKEEPING_SUMMARY.md  HUMAN_IN_THE_LOOP_SYSTEM.md  IMPLEMENTATION_ROADMAP.md  LANGCHAIN_IMPLEMENTATION_GUIDE.md  LANGCHAIN_INTEGRATION_SUMMARY.md  LLM_ORCHESTRATION_ARCHITECTURE.md  MODEL_OBSERVATION_FRAMEWORK.md  PROJECT_ANALYSIS_AND_RECOMMENDATIONS.md  PROMPT_VERSIONING_SYSTEM.md  RAG_QA_PROJECT_PLAN.md
phase-3-specialization/rag-conversational-ai-assistant/scripts/: deploy-azure-optimized.sh  deploy-azure.sh  setup.sh  verify-deployment.sh
phase-3-specialization/rag-conversational-ai-assistant/src/: __init__.py
phase-3-specialization/rag-conversational-ai-assistant/src/api/: main.py
phase-3-specialization/rag-conversational-ai-assistant/src/config/: __init__.py  azure_settings.py
phase-3-specialization/rag-conversational-ai-assistant/src/core/: document_processor.py  rag_engine.py  vector_store.py
phase-3-specialization/rag-conversational-ai-assistant/src/frontend/: streamlit_app.py
phase-3-specialization/rag-conversational-ai-assistant/src/orchestration/: __init__.py  langchain_example.py  llm_orchestrator.py
phase-3-specialization/rag-conversational-ai-assistant/src/utils/: text_utils.py
phase-3-specialization/rag-conversational-ai-assistant/tests/: conftest.py  test_api.py
phase-4-portfolio-resume/portfolio-site/: .eslintrc.cjs  .gitignore  ANALYTICS_SETUP.md  Profile.docx  Profile.txt  README.md  eslint.config.js  ga-test-console.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
(+137 files in other folders)
